set the key files from properties